--- a/재고관리자동화/placeorderAutomation/src/main/resources/templates/fragments/sidebar.html
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/templates/fragments/sidebar.html
@@ -9,7 +9,7 @@
         <div class="sidebar-brand-icon rotate-n-15">
             <i class="fas fa-laugh-wink"></i>
         </div>
-        <div class="sidebar-brand-text mx-3">UMS</div>
+        <div class="sidebar-brand-text mx-3">LTL</div>
     </a>
 
     <!-- 구분선 -->
@@ -25,19 +25,29 @@
 
     <!-- 고객사 납품 -->
     <li class="nav-item">
-        <a class="nav-link" th:href="@{/task/outgoing}">
-            <i class="fas fa-fw fa-chart-area"></i>
-            <span>고객사 납품</span></a>
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#task-outgoing"
+           aria-expanded="true" aria-controls="task-outgoing">
+            <i class="fas fa-fw fa-wrench"></i>
+            <span>납품</span>
+        </a>
+        <div id="task-outgoing" class="collapse" aria-labelledby="task-outgoing"
+             data-parent="#accordionSidebar">
+            <div class="bg-white py-2 collapse-inner rounded">
+                <h6 class="collapse-header">납품</h6>
+                <a class="collapse-item" th:href="@{/task/outgoing}">고객사 납품</a>
+                <a class="collapse-item" th:href="@{/task/outgoing-manual}">고객사 수동 납품</a>
+            </div>
+        </div>
     </li>
 
     <!-- 자재 관리 -->
     <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-           aria-expanded="true" aria-controls="collapseUtilities">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#task-part"
+           aria-expanded="true" aria-controls="task-part">
             <i class="fas fa-fw fa-wrench"></i>
-            <span>자재 업무</span>
+            <span>자재</span>
         </a>
-        <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
+        <div id="task-part" class="collapse" aria-labelledby="task-part"
              data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
                 <h6 class="collapse-header">자재 관리</h6>
@@ -57,12 +67,12 @@
 
     <!-- 품목 관리 기능 -->
     <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
-           aria-expanded="true" aria-controls="collapsePages">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#manage-part"
+           aria-expanded="true" aria-controls="manage-part">
             <i class="fas fa-fw fa-folder"></i>
-            <span>자재 관리</span>
+            <span>품목</span>
         </a>
-        <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+        <div id="manage-part" class="collapse" aria-labelledby="manage-part" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
                 <div class="collapse-divider"></div>
                 <h6 class="collapse-header">품목 관리</h6>
